--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
         .chart-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px; /* Adjust the gap between charts as needed */
+            gap: 20px; 
         }
         .chart {
-            flex: 1 1 calc(50% - 20px); /* Adjust width and gap here */
-            min-width: 300px; /* Ensure charts don't get too small */
+            flex: 1 1 calc(50% - 20px); 
+            min-width: 300px; 
         }
         .combined-chart-container {
             display: flex;
-            gap: 20px; /* Adjust the gap between bubble chart and map */
-            margin-top: 20px; /* Add margin to separate from charts above */
-            align-items: flex-start; /* Align items at the top */
+            gap: 20px; 
+            margin-top: 20px; 
+            align-items: flex-start; 
         }
         #bubbleplot {
-            flex: 1; /* Make bubble chart take up remaining space */
-            min-width: 300px; /* Ensure bubble chart doesn't get too small */
+            flex: 1; 
+            min-width: 300px; 
         }
         .iframe-container {
-            flex: 1; /* Make iframe container take up remaining space */
-            min-width: 300px; /* Ensure iframe doesn't get too small */
+            flex: 1; 
+            min-width: 300px; 
         }
     </style>
 </head>
